# Tasks

./: .gitignore
backend/: chroma_hnswlib-0.7.6-cp313-cp313-win_amd64.whl  pyproject.toml
backend/handler/: chat_gpt.py  env.py  extract.py  files_work.py  read_email.py  start.ps1  temp.py
backend/handler/DB/: ai_work.py  temp.py  temp_excel2db.py  work.py
